增加DaisyResponse可以往thymeleaf模板传递数据

--- a/daisy-test/src/main/resources/templates/index.html
+++ b/daisy-test/src/main/resources/templates/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>hello</title>
 </head>
 <body>
-    <h1>hello 1223333</h1>
+<h1 th:text="'我的名字叫：'+${name}"></h1>
+<h1 th:text="'我今年'+${age}+'岁了'"></h1>
 </body>
 </html>
